; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_h8300_timer16.c_timer16_clocksource_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_h8300_timer16.c_timer16_clocksource_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clocksource = type { i32 }
%struct.timer16_priv = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clocksource*)* @timer16_clocksource_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @timer16_clocksource_read(%struct.clocksource* %0) #0 {
  %2 = alloca %struct.clocksource*, align 8
  %3 = alloca %struct.timer16_priv*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.clocksource* %0, %struct.clocksource** %2, align 8
  %6 = load %struct.clocksource*, %struct.clocksource** %2, align 8
  %7 = call %struct.timer16_priv* @cs_to_priv(%struct.clocksource* %6)
  store %struct.timer16_priv* %7, %struct.timer16_priv** %3, align 8
  %8 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %9 = getelementptr inbounds %struct.timer16_priv, %struct.timer16_priv* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %5, align 8
  %11 = load %struct.timer16_priv*, %struct.timer16_priv** %3, align 8
  %12 = call i64 @timer16_get_counter(%struct.timer16_priv* %11)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* %4, align 8
  %15 = add i64 %13, %14
  ret i64 %15
}

declare dso_local %struct.timer16_priv* @cs_to_priv(%struct.clocksource*) #1

declare dso_local i64 @timer16_get_counter(%struct.timer16_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
